tests/error/index.py
x = [1, 2, 3]
print 'Start'
print x[4] 
print 'End'
